--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@
 #
 **/[Ll]ibrary/
 /[Tt]emp/
-/[Oo]bj/
+**/[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+**/UserSettings
+
+
+
+**/.idea
+
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
@@ -24,6 +30,7 @@
 
 # Visual Studio cache directory
 .vs/
+**/.vscode/
 
 # Gradle cache directory
 .gradle/
